Adding task add

--- a/testangular2/todo/public/tasks.component.html
+++ b/testangular2/todo/public/tasks.component.html
@@ -1,5 +1,13 @@
 <body>
   <div class="heading">TO-DO</div>
+  <div id="newtask">
+    <div>Create a new task</div>
+    <label>Name</label>
+    <input type="text" id="name" [(ngModel)]="newTask.name"/>
+    <label>Date</label>
+    <input type="text" id="date" [(ngModel)]="newTask.date"/>
+    <input type="submit" id="submit" (click)="addTask();" [disabled]="disableAddTask()" value="create"/>
+  </div>
   <div id="tasksList">
     <p>Number of tasks: <span id="length">{{tasks.length}}</span></p>
     <span id="message">{{message}}</span>
